crates/plotnik-lib/tests/02-parser/recovery_incomplete/ref_trailing_comment_at_eof.txt
Q = (R ;x
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:10
  |
1 | Q = (R ;x
  |          ^
  |
help: add `)` to close the node
